--- a/pertemuan01.html
+++ b/pertemuan01.html
@@ -366,10 +366,9 @@ print("Hello, World!")
 print("Saya belajar Python")
                             </code></pre>
                         <p class="text-small"><strong>Output Terminal:</strong></p>
-                        <div class="code-output">
-                            Hello, World!<br>
-                            Saya belajar Python
-                        </div>
+                        <pre class="code-output" style="line-height: 1.1; margin: 0;">Hello, World!
+Saya belajar Python
+                        </pre>
                     </div>
                 </div>
             </section>
@@ -423,27 +422,55 @@ print("Baris 2")
                 </div>
             </section>
 
-            <!-- SLIDE 20: TUGAS -->
+            <!-- SLIDE 20: TUGAS UTAMA -->
             <section>
-                <h3>Tugas Minggu Ini <i class="bi bi-list-check"></i></h3>
-                <div class="flex-container card card-warning">
-                    <div class="flex-col text-left">
-                        <h4>Instruksi</h4>
-                        <ol class="text-smaller">
-                            <li>Buat Notebook Colab baru.</li>
-                            <li>Judul: <code>Tugas1_NIM_Nama</code>.</li>
-                            <li>Buat program interaktif yang meminta input biodata lengkap & hobi Anda menggunakan fungsi <code>input()</code>, lalu tampilkan hasil biodatanya dengan format yang rapih dan terstruktur.</li>
-                            <li>Tulis refleksi singkat di bagian bawah (Text Cell) tentang pengalaman menggunakan <code>input()</code>.</li>
-                        </ol>
-                    </div>
-                    <div class="flex-col text-center" style="flex: 0.5;">
-                        <div style="font-size: 3em;"><i class="bi bi-exclamation-triangle"></i></div>
-                        <p class="text-smaller"><strong>Deadline:</strong><br>H-1 Pertemuan Berikutnya</p>
+                <h3>Tugas Pertemuan 1 <i class="bi bi-list-check"></i></h3>
+                <div class="card card-warning text-left">
+                    <h4>Deskripsi Tugas</h4>
+                    <ol class="text-smaller">
+                        <li><strong>Program Biodata:</strong> Buat program yang menampilkan biodata lengkap & hobi Anda dengan format yang rapih dan terstruktur.</li>
+                        <li><strong>Refleksi:</strong> Tulis refleksi singkat tentang pengalaman membuat program pertama Anda.</li>
+                    </ol>
+                </div>
+            </section>
+
+            <!-- SLIDE 21: PANDUAN PENGERJAAN -->
+            <section>
+                <h3>Panduan Pengerjaan Tugas</h3>
+                <div class="card card-info text-left">
+                    <p class="text-small">Untuk memastikan pemahaman mendalam, ikuti langkah-langkah berikut:</p>
+                    <ul class="text-smaller">
+                        <li><strong>Persiapan:</strong> Buka Google Colab dan buat notebook baru.</li>
+                        <li><strong>Implementasi:</strong> Tulis kode dengan komentar jelas di setiap baris.</li>
+                        <li><strong>Testing:</strong> Jalankan kode dan pastikan output sesuai.</li>
+                        <li><strong>Refleksi:</strong> Tambahkan cell teks untuk refleksi pengalaman.</li>
+                        <li><strong>Dokumentasi:</strong> Jelaskan kode dan hasil di komentar.</li>
+                    </ul>
+                </div>
+            </section>
+
+            <!-- SLIDE 22: PENGUMPULAN TUGAS -->
+            <section>
+                <h3>Pengumpulan Tugas</h3>
+                <div class="card card-warning text-left">
+                    <div class="flex-container" style="align-items: center;">
+                        <div class="flex-col text-left">
+                            <p class="text-smaller"><strong>Instruksi:</strong></p>
+                            <ul class="text-smaller">
+                                <li>Simpan file: <code>Tugas1_NIM_Nama.ipynb</code></li>
+                                <li>Sertakan komentar dan output contoh di notebook.</li>
+                                <li>Upload ke LMS sebelum deadline.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-col text-center">
+                            <div style="font-size: 3em;"><i class="bi bi-exclamation-triangle"></i></div>
+                            <p class="text-smaller"><strong>Deadline:</strong><br>H-1 Pertemuan Berikutnya</p>
+                        </div>
                     </div>
                 </div>
             </section>
 
-            <!-- SLIDE 21: NEXT TOPIC -->
+            <!-- SLIDE 23: NEXT TOPIC -->
             <section>
                 <h3>Pertemuan Berikutnya</h3>
                 <div style="margin-top: 40px;">
@@ -453,7 +480,7 @@ print("Baris 2")
                 </div>
             </section>
 
-            <!-- SLIDE 22: Q&A -->
+            <!-- SLIDE 24: Q&A -->
             <section>
                 <h1>Q & A</h1>
                 <p>Terima Kasih!</p>
