--- a/pertemuan06.html
+++ b/pertemuan06.html
@@ -14,6 +14,17 @@
     <!-- Custom PKOM Theme (Shared Style) -->
     <link rel="stylesheet" href="css/pkom-theme.css">
 
+    <style>
+        .reveal[data-theme="dark"] .card {
+            background: #333 !important;
+            color: white !important;
+            border-color: #555 !important;
+        }
+        .reveal[data-theme="dark"] .card hr {
+            border-color: #555 !important;
+        }
+    </style>
+
     <!-- Syntax highlighting -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
@@ -84,27 +95,27 @@
             <!-- === SLIDE 4: APA ITU LIST === -->
             <section>
                 <h3>Apa itu List?</h3>
-                <div class="flex-container">
-                    <div class="flex-col text-left text-small">
-                        <p><strong>List</strong> adalah struktur data yang dapat menyimpan <strong>banyak nilai</strong>
+                <div class="grid-2">
+                    <div class="card text-left">
+                        <p class="text-small"><strong>List</strong> adalah struktur data yang dapat menyimpan <strong>banyak nilai</strong>
                             dalam satu variabel.</p>
-                        <p>Bayangkan sebuah <strong>Rak Buku</strong> atau Loker yang bernomor.</p>
+                        <p class="text-small">Bayangkan sebuah <strong>Rak Buku</strong> atau Loker yang bernomor.</p>
                     </div>
-                    <div class="flex-col card card-info">
-                        <div style="display: flex; gap: 5px; justify-content: center; margin-bottom: 10px;">
-                            <div style="border: 2px solid #333; padding: 10px; background: white;">A</div>
-                            <div style="border: 2px solid #333; padding: 10px; background: white;">B</div>
-                            <div style="border: 2px solid #333; padding: 10px; background: white;">C</div>
-                            <div style="border: 2px solid #333; padding: 10px; background: white;">D</div>
-                            <div style="border: 2px solid #333; padding: 10px; background: white;">E</div>
+                    <div class="card card-info">
+                        <h4>Ilustrasi List</h4>
+                        <div style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 8px; margin-bottom: 15px; justify-items: center;">
+                            <div style="border: 2px solid #333; padding: 12px 8px; background: white; border-radius: 4px; font-weight: bold;">A</div>
+                            <div style="border: 2px solid #333; padding: 12px 8px; background: white; border-radius: 4px; font-weight: bold;">B</div>
+                            <div style="border: 2px solid #333; padding: 12px 8px; background: white; border-radius: 4px; font-weight: bold;">C</div>
+                            <div style="border: 2px solid #333; padding: 12px 8px; background: white; border-radius: 4px; font-weight: bold;">D</div>
+                            <div style="border: 2px solid #333; padding: 12px 8px; background: white; border-radius: 4px; font-weight: bold;">E</div>
                         </div>
-                        <div
-                            style="display: flex; gap: 5px; justify-content: center; font-family: monospace; color: #666;">
-                            <div style="width: 35px;">[0]</div>
-                            <div style="width: 35px;">[1]</div>
-                            <div style="width: 35px;">[2]</div>
-                            <div style="width: 35px;">[3]</div>
-                            <div style="width: 35px;">[4]</div>
+                        <div style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 8px; justify-items: center; font-family: monospace; color: #666; font-size: 0.9em;">
+                            <div>[0]</div>
+                            <div>[1]</div>
+                            <div>[2]</div>
+                            <div>[3]</div>
+                            <div>[4]</div>
                         </div>
                     </div>
                 </div>
@@ -131,60 +142,110 @@ angka = list(range(1, 6))  # [1, 2, 3, 4, 5]
             <!-- === SLIDE 6: MENGAKSES ELEMEN === -->
             <section>
                 <h3>Mengakses Elemen</h3>
-                <div class="flex-container">
-                    <div class="flex-col">
+                <div class="grid-2">
+                    <div class="card">
+                        <h4>Index Positif & Negatif</h4>
                         <pre><code class="python" data-trim>
-buah = ["apel", "jeruk", "mangga", "pisang"]
+buah = ["apel", "jeruk", 
+        "mangga", "pisang"]
 
-# Index Positif (0, 1, 2...)
 print(buah[0])   # apel
 print(buah[2])   # mangga
-
-# Index Negatif (-1, -2...)
-print(buah[-1])  # pisang (Terakhir)
-                            </code></pre>
+print(buah[-1])  # pisang
+                        </code></pre>
+                        <h5>Output Terminal</h5>
+                        <div class="code-output" style="margin-top: 10px; font-size: 0.5em;">
+apel<br>mangga<br>pisang
+                        </div>
                     </div>
-                    <div class="flex-col card">
+                    <div class="card">
                         <h4>SLICING (Potongan)</h4>
-                        <pre><code class="python">
+                        <pre><code class="python" data-trim>
 # [start:stop]
-print(buah[0:2])
+buah[0:2]
 # ["apel", "jeruk"]
 
-print(buah[1:])
+buah[1:]
 # ["jeruk", "mangga", "pisang"]
-                            </code></pre>
+                        </code></pre>
+                        <h5>Output Terminal</h5>
+                        <div class="code-output" style="margin-top: 10px; font-size: 0.5em;">
+['apel', 'jeruk']<br>['jeruk', 'mangga', 'pisang']
+                        </div>
                     </div>
                 </div>
             </section>
 
-            <!-- === SLIDE 7: MODIFIKASI LIST === -->
+            <!-- === SLIDE 7: MODIFIKASI LIST - MENGUBAH & MENAMBAH === -->
             <section>
-                <h3>Modifikasi List</h3>
-                <pre><code class="python" data-trim style="max-height: 400px;">
-buah = ["apel", "jeruk", "mangga"]
-
-# 1. Mengubah Data
+                <h3>Mengubah & Menambah Data</h3>
+                <div class="grid-2">
+                    <div class="card">
+                        <h4>Mengubah Elemen</h4>
+                        <p class="text-smaller">Gunakan index untuk mengubah nilai</p>
+                        <pre><code class="python" data-trim>
+buah = ["apel", "jeruk"]
 buah[0] = "anggur"
-# ["anggur", "jeruk", "mangga"]
-
-# 2. Menambah Data (Append)
-buah.append("pisang")
-# ["anggur", "jeruk", "mangga", "pisang"]
-
-# 3. Menyisipkan Data (Insert)
-buah.insert(1, "nanas")
-# ["anggur", "nanas", "jeruk", "mangga", "pisang"]
-
-# 4. Menghapus Data (Remove)
-buah.remove("jeruk")
-# ["anggur", "nanas", "mangga", "pisang"]
-                    </code></pre>
+print(buah)
+                        </code></pre>
+                        <h5>Output Terminal</h5>
+                        <div class="code-output" style="margin-top: 5px; font-size: 0.5em;">
+['anggur', 'jeruk']
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Menambah Elemen</h4>
+                        <p class="text-smaller">Gunakan <code>append()</code> untuk menambah di akhir</p>
+                        <pre><code class="python" data-trim>
+buah = ["apel", "jeruk"]
+buah.append("mangga")
+print(buah)
+                        </code></pre>
+                        <h5>Output Terminal</h5>
+                        <div class="code-output" style="margin-top: 5px; font-size: 0.5em;">
+['apel', 'jeruk', 'mangga']
+                        </div>
+                    </div>
+                </div>
             </section>
 
-            <!-- === SLIDE 8: METHOD LIST === -->
+            <!-- === SLIDE 8: MODIFIKASI LIST - MENYISIPKAN & MENGHAPUS === -->
+            <section>
+                <h3>Menyisipkan & Menghapus Data</h3>
+                <div class="grid-2">
+                    <div class="card">
+                        <h4>Menyisipkan Elemen</h4>
+                        <p class="text-smaller">Gunakan <code>insert(index, nilai)</code></p>
+                        <pre><code class="python" data-trim>
+buah = ["apel", "mangga"]
+buah.insert(1, "jeruk")
+print(buah)
+                        </code></pre>
+                        <h5>Output Terminal</h5>
+                        <div class="code-output" style="margin-top: 5px; font-size: 0.5em;">
+['apel', 'jeruk', 'mangga']
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Menghapus Elemen</h4>
+                        <p class="text-smaller">Gunakan <code>remove(nilai)</code></p>
+                        <pre><code class="python" data-trim>
+buah = ["apel", "jeruk", "mangga"]
+buah.remove("jeruk")
+print(buah)
+                        </code></pre>
+                        <h5>Output Terminal</h5>
+                        <div class="code-output" style="margin-top: 5px; font-size: 0.5em;">
+['apel', 'mangga']
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- === SLIDE 9: METHOD LIST === -->
             <section>
                 <h3>Method List Populer</h3>
+                <p class="text-smaller">Method adalah fungsi yang dimiliki oleh objek list untuk memanipulasi datanya. Berikut adalah method-method populer:</p>
                 <table class="text-small">
                     <thead>
                         <tr>
@@ -265,6 +326,7 @@ print(sum(angka))  # 25
             <!-- === SLIDE 10: ITERASI LIST === -->
             <section>
                 <h3>Iterasi List (Looping)</h3>
+                <p class="text-smaller">Iterasi memungkinkan kita mengakses setiap elemen dalam list satu per satu. Ada beberapa cara untuk melakukannya:</p>
                 <pre><code class="python" data-trim>
 buah = ["apel", "jeruk", "mangga"]
 
@@ -290,6 +352,13 @@ for i, item in enumerate(buah):
                         <h4>1. Statistik List</h4>
                         <p class="text-smaller">Input: List Angka (ex: <code>[10, 50, 30]</code>)</p>
                         <p class="text-smaller">Output: Total, Rata-rata, Max, Min.</p>
+                        <h5>Output Terminal</h5>
+                        <pre class="code-output" style="margin-top: 5px; font-size: 0.5em;">
+Total: 90
+Rata-rata: 30.0
+Max: 50
+Min: 10
+                        </pre>
                     </div>
                     <div class="flex-col card">
                         <h4>2. Filter Ganjil Genap</h4>
@@ -298,6 +367,11 @@ for i, item in enumerate(buah):
                             <li><code>genap = [...]</code></li>
                             <li><code>ganjil = [...]</code></li>
                         </ul>
+                        <h5>Output Terminal</h5>
+                        <pre class="code-output" style="margin-top: 5px; font-size: 0.5em;">
+genap = [2, 4]
+ganjil = [1, 3, 5]
+                        </pre>
                     </div>
                 </div>
             </section>
@@ -305,19 +379,39 @@ for i, item in enumerate(buah):
             <!-- === SLIDE 12: HANDS ON 3 & 4 === -->
             <section>
                 <h3>Latihan Tambahan</h3>
-                <div class="flex-container">
-                    <div class="flex-col card">
-                        <h4>3. To-Do List App</h4>
-                        <p class="text-smaller">Menu:</p>
-                        <ul class="text-smaller">
-                            <li>1. Tambah Tugas</li>
-                            <li>2. Lihat Tugas</li>
-                            <li>3. Hapus Tugas</li>
-                        </ul>
+                <div class="card">
+                    <div class="grid-2">
+                        <div>
+                            <h4>3. To-Do List App</h4>
+                            <p class="text-smaller">Menu: 1. Tambah Tugas | 2. Lihat Tugas | 3. Hapus Tugas</p>
+                        </div>
+                        <div>
+                            <h5>Output Terminal</h5>
+                            <pre class="code-output" style="margin-top: 5px; font-size: 0.5em;">
+1. Tambah Tugas
+2. Lihat Tugas
+3. Hapus Tugas
+Pilih menu: 2
+Tugas Anda:
+1. Belajar Python
+2. Kerjakan tugas PKOM
+                            </pre>
+                        </div>
                     </div>
-                    <div class="flex-col card">
-                        <h4>4. Penghitung Kata</h4>
-                        <p class="text-smaller">Hitung berapa kali sebuah kata muncul dalam list.</p>
+                </div>
+                <div class="card">
+                    <div class="grid-2">
+                        <div>
+                            <h4>4. Penghitung Kata</h4>
+                            <p class="text-smaller">Hitung berapa kali sebuah kata muncul dalam list.</p>
+                        </div>
+                        <div>
+                            <h5>Output Terminal</h5>
+                            <pre class="code-output" style="margin-top: 5px; font-size: 0.5em;">
+List kata: ['python', 'java', 'python', 'c++', 'python']
+Kata 'python' muncul 3 kali
+                            </pre>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -336,7 +430,7 @@ for i, item in enumerate(buah):
                 </ul>
             </section>
 
-            <!-- === SLIDE 14: TUGAS === -->
+            <!-- === SLIDE 14: TUGAS UTAMA === -->
             <section>
                 <h3>Tugas Pertemuan 6 <i class="bi bi-list-check"></i></h3>
                 <div class="card card-warning text-left">
@@ -345,41 +439,80 @@ for i, item in enumerate(buah):
                             <br>Program statistik & filtering data angka.
                         </li>
                         <li><strong>Data Manager App:</strong>
-                            <br>Aplikasi CRUD sederhana untuk data Mahasiswa (Nama, NIM).
+                            <br>Aplikasi CRUD (Create, Read, Update, Delete) sederhana untuk data Mahasiswa (Nama, NIM).
                         </li>
                         <li><strong>Word Counter:</strong>
                             <br>Menghitung frekuensi kata dari sebuah kalimat input.
                         </li>
                     </ol>
-                    <hr>
-                    <p class="text-smaller"><strong>File:</strong> <code>Tugas6_NIM_Nama.py</code> |
-                        <strong>Deadline:</strong> Sebelum Quiz 1</p>
                 </div>
             </section>
 
-            <!-- === SLIDE 15: NEXT WEEK === -->
+            <!-- === SLIDE 15: PANDUAN PENGERJAAN === -->
+            <section>
+                <h3>Panduan Pengerjaan Tugas</h3>
+                <div class="card card-info text-left">
+                    <p class="text-small">Untuk memastikan pemahaman list dan operasinya, ikuti langkah-langkah berikut:</p>
+                    <ul class="text-smaller">
+                        <li><strong>Analisis Data:</strong> Tentukan struktur list dan operasi yang diperlukan.</li>
+                        <li><strong>Desain Alur:</strong> Buat pseudocode dengan method list dan kontrol alur.</li>
+                        <li><strong>Implementasi:</strong> Tulis kode dengan komentar jelas, gunakan method list yang tepat.</li>
+                        <li><strong>Testing:</strong> Jalankan dengan berbagai input untuk memastikan operasi list bekerja benar.</li>
+                        <li><strong>Refleksi:</strong> Tambahkan komentar untuk refleksi penggunaan list.</li>
+                        <li><strong>Dokumentasi:</strong> Jelaskan logika dan hasil di komentar kode.</li>
+                    </ul>
+                </div>
+            </section>
+
+            <!-- === SLIDE 16: PENGUMPULAN TUGAS === -->
+            <section>
+                <h3>Pengumpulan Tugas</h3>
+                <div class="card card-warning text-left">
+                    <div class="flex-container" style="align-items: center;">
+                        <div class="flex-col text-left">
+                            <p class="text-smaller"><strong>Instruksi:</strong></p>
+                            <ul class="text-smaller">
+                                <li>Simpan file: <code>Tugas6_NIM_Nama.ipynb</code></li>
+                                <li>Sertakan komentar dan output contoh di kode.</li>
+                                <li>Upload ke LMS sebelum deadline.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-col text-center">
+                            <div style="font-size: 3em;"><i class="bi bi-exclamation-triangle"></i></div>
+                            <p class="text-smaller"><strong>Deadline:</strong><br>Sebelum Quiz 1</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- === SLIDE 17: NEXT WEEK === -->
             <section>
                 <h3>Pertemuan Berikutnya</h3>
-                <div class="card" style="background: #333; color: white;">
-                    <h1>QUIZ 1 <i class="bi bi-list-check"></i></h1>
+                <div class="card card-info" style="background: white; text-align: center; border: 2px solid #333;">
+                    <h2>QUIZ 1 <i class="bi bi-list-check"></i></h2>
                     <hr style="border-color: #555;">
-                    <p>Materi: Pertemuan 1 - 6</p>
-                </div>
-                <div
-                    style="margin-top: 20px; display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; font-size: 0.6em;">
-                    <div class="card">Variabel</div>
-                    <div class="card">Logika (If/Else)</div>
-                    <div class="card">Looping</div>
-                    <div class="card">List</div>
-                    <div class="card">Computational Thinking</div>
-                    <div class="card">Problem Solving</div>
+                    <div class="grid-2" style="font-size: 0.8em;">
+                        <ol style="text-align: left; padding-left: 20px; margin: 10px 0;">
+                            <li>Variabel</li>
+                            <li>Logika (If/Else)</li>
+                            <li>Looping</li>
+                        </ol>
+                        <ol start="4" style="text-align: left; padding-left: 20px; margin: 10px 0;">
+                            <li>List</li>
+                            <li>Computational Thinking</li>
+                            <li>Problem Solving</li>
+                        </ol>
+                    </div>
                 </div>
             </section>
 
-            <!-- === SLIDE 16: Q&A === -->
+            <!-- === SLIDE 18: Q&A === -->
             <section>
                 <h1>Q & A</h1>
                 <p>Terima Kasih!</p>
+                <div class="text-smaller" style="margin-top: 50px; color: #666;">
+                    Sampai jumpa! <i class="bi bi-hand-wave"></i>
+                </div>
             </section>
 
         </div>
